// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test checkbox group layout direction 1`] = `
"<div class="var-checkbox-group__wrap">
  <div class="var-checkbox-group var-checkbox-group--vertical">
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--unchecked"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--unchecked"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test checkbox group validation 1`] = `
"<div class="var-checkbox-group__wrap">
  <div class="var-checkbox-group var-checkbox-group--horizontal">
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--unchecked var-checkbox--error"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text var-checkbox--error"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--unchecked var-checkbox--error"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text var-checkbox--error"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>至少选一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test checkbox group validation 2`] = `
"<div class="var-checkbox-group__wrap">
  <div class="var-checkbox-group var-checkbox-group--horizontal">
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--checked"><i class="var-icon var-icon--set var-icon-checkbox-marked var-checkbox__icon var-checkbox--with-animation" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-checkbox__wrap">
      <div class="var-checkbox">
        <div class="var-checkbox__action var-checkbox--unchecked"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-checkbox__text"></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test checkbox validation 1`] = `
"<div class="var-checkbox__wrap">
  <div class="var-checkbox">
    <div class="var-checkbox__action var-checkbox--unchecked var-checkbox--error"><i class="var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <div class="var-checkbox__text var-checkbox--error"></div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须勾选</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test checkbox validation 2`] = `
"<div class="var-checkbox__wrap">
  <div class="var-checkbox">
    <div class="var-checkbox__action var-checkbox--checked"><i class="var-icon var-icon--set var-icon-checkbox-marked var-checkbox__icon var-checkbox--with-animation" style="transition-duration: 0ms;" var-checkbox-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <div class="var-checkbox__text"></div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
